--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.telecommunications.nile</groupId>
-  <artifactId>nile-spring-common</artifactId>
+  <artifactId>nile-spring-cores</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>nile-spring-common</name>
+  <name>nile-spring-core</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring</artifactId>
-      <version>4.3.0.RELEASE</version>
-    </dependency>
+
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-core</artifactId>
